WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
11794
fix lifetime problems affecting Frame's ownerElement pointer
https://bugs.webkit.org/show_bug.cgi?id=11794
Summary
fix lifetime problems affecting Frame's ownerElement pointer
Darin Adler
Reported
2006-12-09 14:39:28 PST
Brady ran into some crashes while doing his history work. At the bottom are problems with the lifetime of the Frame's ownerElement pointer. I have a patch to address this.
Attachments
patch, no change log yet
(56.32 KB, patch)
2006-12-09 14:40 PST
,
Darin Adler
no flags
Details
Formatted Diff
Diff
patch with change log
(63.16 KB, patch)
2006-12-11 15:18 PST
,
Darin Adler
beidson
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Darin Adler
Comment 1
2006-12-09 14:40:05 PST
Created
attachment 11792
[details]
patch, no change log yet
Darin Adler
Comment 2
2006-12-11 15:18:51 PST
Created
attachment 11810
[details]
patch with change log
Brady Eidson
Comment 3
2006-12-11 15:52:55 PST
Comment on
attachment 11810
[details]
patch with change log Fix the ChangeLog merging madness, and r=me
Darin Adler
Comment 4
2006-12-11 15:53:40 PST
Committed revision 18163.
David Kilzer (:ddkilzer)
Comment 5
2006-12-11 16:45:40 PST
It appears that this change caused a layout test regression: fast/frames/iframe-option-crash
http://build.webkit.org/results/post-commit-powerpc-mac-os-x/4654/
http://build.webkit.org/post-commit-powerpc-mac-os-x/builds/4654/step-layout-test/0
Darin Adler
Comment 6
2006-12-11 17:27:50 PST
(In reply to
comment #5
)
> It appears that this change caused a layout test regression: > > fast/frames/iframe-option-crash > >
http://build.webkit.org/results/post-commit-powerpc-mac-os-x/4654/
>
http://build.webkit.org/post-commit-powerpc-mac-os-x/builds/4654/step-layout-test/0
Darn. I don't think this is a real regression -- I think I just need to update this test result. The point of the test is to check if you crash. I'll try to get to this tonight.
David Kilzer (:ddkilzer)
Comment 7
2006-12-11 22:30:51 PST
(In reply to
comment #6
)
> I don't think this is a real regression -- I think I just need to update this > test result. The point of the test is to check if you crash.
Layout test results fixed in
r18167
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug