WebCoreWin:

Reviewed by Brady.

        - http://bugs.webkit.org/show_bug.cgi?id=11794
          fix lifetime problems affecting Frame's ownerElement pointer

        * WebCore.vcproj/WebCore.vcproj: Update for added files.

        * bridge/win/FrameWin.h:
        * bridge/win/FrameWin.cpp: (WebCore::FrameWin::FrameWin):
        * loader/win/FrameLoaderWin.cpp: (WebCore::FrameLoader::createFrame):
        Changed to use HTMLFrameOwnerElement.

        * platform/win/TemporaryLinkStubs.cpp: (FrameLoader::load):
        Changed to use HTMLFormElement.

WebKitWin:

        Reviewed by Brady.

        - http://bugs.webkit.org/show_bug.cgi?id=11794
          fix lifetime problems affecting Frame's ownerElement pointer

        * WebFrame.h:
        * WebFrame.cpp:
        (WebFrame::initWithWebFrameView): Changed to use HTMLFrameOwnerElement.
        (WebFrame::createFrame): Ditto.



git-svn-id: http://svn.webkit.org/repository/webkit/branches/WindowsMerge@22647 268f45cc-cd09-0410-ab3c-d52691b4dbfc