WebCore/bridge/win/FrameWin.h
@@ -53,7 +53,7 @@ public:
     virtual void ref() = 0;
     virtual void deref() = 0;
 
-    virtual Frame* createFrame(const KURL&, const String& name, Element* ownerElement, const String& referrer) = 0;
+    virtual Frame* createFrame(const KURL&, const String& name, HTMLFrameOwnerElement*, const String& referrer) = 0;
     virtual void openURL(const String& URL, const Event* triggeringEvent, bool newWindow, bool lockHistory) = 0;
     virtual void stopMainResourceLoad() = 0;
     virtual void submitForm(const FrameLoadRequest&, Element* form, HashMap<String, String>& formValues) = 0;
@@ -88,7 +88,7 @@ public:
 
 class FrameWin : public Frame {
 public:
-    FrameWin(Page*, Element*, FrameWinClient*, FrameLoaderClient*);
+    FrameWin(Page*, HTMLFrameOwnerElement*, FrameWinClient*, FrameLoaderClient*);
     ~FrameWin();
 
     FrameWinClient* client() { return m_client.get(); }
